removed image upload option
